--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -84,9 +84,8 @@ jobs:
             configuration:"Release" \
             export_options:"ExportOptions.plist" \
             clean:"true" \
-            build_number: "$build_number" \
             suppress_xcode_output:"true" \
-            xcargs:"CODE_SIGN_IDENTITY='iPhone Distribution' CODE_SIGN_STYLE=Manual PROVISIONING_PROFILE_SPECIFIER='app-store-profile-sample-github-actions'"
+            xcargs:"BUILD_NUMBER=$build_number CODE_SIGN_IDENTITY='iPhone Distribution' CODE_SIGN_STYLE=Manual PROVISIONING_PROFILE_SPECIFIER='app-store-profile-sample-github-actions'"
             eza --tree build
           
           
