--- a/.github/workflows/ios_build.yml
+++ b/.github/workflows/ios_build.yml
@@ -71,7 +71,7 @@ jobs:
           pod install --repo-update
              
           fastlane run update_project_team path:"./IosGithubActionBuild.xcodeproj" teamid:"$TEAM_ID"
-          
+          fastlane run increment_build_number build_number:"$build_number"
           fastlane run build_ios_app \
             scheme:"IosGithubActionBuild" \
             workspace:"IosGithubActionBuild.xcworkspace" \
@@ -85,7 +85,7 @@ jobs:
             export_options:"ExportOptions.plist" \
             clean:"true" \
             suppress_xcode_output:"true" \
-            xcargs:"BUILD_NUMBER=$build_number CODE_SIGN_IDENTITY='iPhone Distribution' CODE_SIGN_STYLE=Manual PROVISIONING_PROFILE_SPECIFIER='app-store-profile-sample-github-actions'"
+            xcargs:"CODE_SIGN_IDENTITY='iPhone Distribution' CODE_SIGN_STYLE=Manual PROVISIONING_PROFILE_SPECIFIER='app-store-profile-sample-github-actions'"
             eza --tree build
           
           
