--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -36,4 +36,4 @@ jobs:
         run: npm install
 
       - name: Build Android App
-        run: cd android && fastlane beta
+        run: cd android && ./gradlew bundleRelease
